2011-12-04  Mikołaj Izdebski  <zurgunt@gmail.com>

	Workaround bug #5
	* src/lbunzip2.c (mux): Disable stream CRC check. Fixes #5.
	* tests/Makefile.am: Exclude crc1.bz2 from test cases.

2011-11-24  Mikołaj Izdebski  <zurgunt@gmail.com>

	Get rid of AM_MAINTAINER_MODE
	* configure.ac: Remove AM_MAINTAINER_MODE, which was included by
	accident.

2011-11-23  Mikołaj Izdebski  <zurgunt@gmail.com>

	Bump version to 2.1

	Fix a use-after-free vulnerability in lbunzip2
	* src/lbunzip2.c (work_retrieve.c): Move access to s2w_blk before
	work_release() call. Fixes #4.

2011-11-11  Mikołaj Izdebski  <zurgunt@gmail.com>

	Fix build error on OpenBSD 5.0
	* src/main.c (opts_setup): Use _SC_THREAD_THREADS_MAX conditionally.

2011-11-05  Mikołaj Izdebski  <zurgunt@gmail.com>

	Update autogen.sh to remove gitlog-to-changelog
	* build-aux/autogen.sh: Remove gitlog-to-changelog with -r option.

2011-11-02  Mikołaj Izdebski  <zurgunt@gmail.com>

	Update and improve documentation
	* README: Add Laszlo Ersek's copyright notice.
	* yambi/blocksort.c: Add example Manber-Myers algorithm implementation.

2011-10-31  Mikołaj Izdebski  <zurgunt@gmail.com>

	Include ChangeLog.old in tarball
	* Makefile.am: Add ChangeLog.old to EXTRA_DIST.

	Create changelogs
	* build-aux/autogen.sh: Add gitlog-to-changelog Gnulib module.
	* ChangeLog.old: Import from v0.23.
	* ChangeLog: Generate with build-aux/gitlog-to-changelog.

2011-10-30  Mikołaj Izdebski  <zurgunt@gmail.com>

	Minor documentation cleanup

	Add BOOTSTRAP

	Add filenames and short desc to license blocks

	Run automated spelling check

	Make tests/Tester more portable

2011-10-29  Mikołaj Izdebski  <zurgunt@gmail.com>

	Make install and uninstall targets work

	Add list of subdirs to README

	Extend AUTHORS

	Import ALGORITHM

	Add a minimal README

	Cleanup manpage

2011-10-28  Mikołaj Izdebski  <zurgunt@gmail.com>

	Add scantab.h to noinst_HEADERS

2011-10-27  Mikołaj Izdebski  <zurgunt@gmail.com>
