@@ -21,8 +21,8 @@ minbzcat_SOURCES = minbzcat.c
 minbzcat_LDADD = $(top_builddir)/lib/libgnu.a
 
 TESTS_ENVIRONMENT = $(SHELL) $(srcdir)/Tester
-TESTS = 32767.bz2 concat.bz2 crc2.bz2 cve.bz2 empty.bz2 fib.bz2 \
-    gap.bz2 overrun.bz2 rand.bz2 repet.bz2 trash.bz2 void.bz2
+TESTS = 32767.bz2 concat.bz2 ch255.bz2 crc1.bz2 crc2.bz2 cve.bz2 empty.bz2 \
+    fib.bz2 gap.bz2 overrun.bz2 rand.bz2 repet.bz2 trash.bz2 void.bz2
 
 EXTRA_DIST = $(TESTS) 32767.diff bzip2-0.1pl2.c ch255.c crc2.diff cve.c fib.c \
     Tester
